# studybuddy-bot

./: .gitignore  pyproject.toml
src/: calendar.js  calendario.py  clendar.py  database_helper.py  main.py  random  utils.py
